--- a/graphics/GBA_1p.html
+++ b/graphics/GBA_1p.html
@@ -26,6 +26,15 @@
          <div class="runner-name" id="runner-name1"></div>
          <div class="pronouns" id="pronouns1"></div>
       </div>
+
+      <div class="comms-container" id="comms-container1">
+         <div class="comms-name" id="commentator1Name"></div>
+         <div class="comms-pronouns" id="commentator1Pronouns"></div>
+      </div>
+      <div class="comms-container" id="comms-container2">
+         <div class="comms-name" id="commentator2Name"></div>
+         <div class="comms-pronouns" id="commentator2Pronouns"></div>
+      </div>
 	  
       <!-- Game details -->
       <div id="game-name"></div>
