--- a/graphics/GB_3p.html
+++ b/graphics/GB_3p.html
@@ -49,6 +49,23 @@
          <div class="pronouns" id="pronouns3"></div>
       </div>
 
+      <div class="comms-container" id="comms-container1">
+         <div class="comms-name" id="commentator1Name"></div>
+         <div class="comms-pronouns" id="commentator1Pronouns"></div>
+      </div>
+      <div class="comms-container" id="comms-container2">
+         <div class="comms-name" id="commentator2Name"></div>
+         <div class="comms-pronouns" id="commentator2Pronouns"></div>
+      </div>
+      <div class="comms-container" id="comms-container3">
+         <div class="comms-name" id="commentator3Name"></div>
+         <div class="comms-pronouns" id="commentator3Pronouns"></div>
+      </div>
+      <div class="comms-container" id="comms-container4">
+         <div class="comms-name" id="commentator4Name"></div>
+         <div class="comms-pronouns" id="commentator4Pronouns"></div>
+      </div>
+
       <!-- Timer -->
       <div id="timer"></div>
 
@@ -62,7 +79,7 @@
 
       <!-- Game details -->
       <div id="game-name"></div>
-      <div id="host"></div>
+      <!-- <div id="host"></div> -->
 	  
       <!-- Game info -->
       <div id="info-container">
