--- a/graphics/Omnibar.html
+++ b/graphics/Omnibar.html
@@ -6,26 +6,31 @@
       <!-- CSS -->
       <link rel="stylesheet" href="css/common.css" />
       <link rel="stylesheet" href="css/omnibar.css" />
+      <style>
+         body {
+         background: url('img/layouts/Omnibar.png') no-repeat;
+         }
+      </style>
 	  
       <!-- JavaScript -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="js/layouts/omnibar.js"></script>
       <script src="js/third-party/countUp.min.js"></script>
       <script src="js/utils.js"></script>
-      <script src="js/donation.js"></script>
+      <!-- <script src="js/donation.js"></script> -->
    </head>
    <body>
       <div id="omnibar">
-         <div id="charity-logo" class="omnibar-item">
+         <!-- <div id="charity-logo" class="omnibar-item">
             <img id="charity-logo-img" src="" />
-         </div>
-         <div id="donation-total" class="omnibar-item">
+         </div> -->
+         <!-- <div id="donation-total" class="omnibar-item">
             <span id="donation-total-text"></span>
-         </div>
+         </div> -->
          <div id="omnibar-content" class="omnibar-item"></div>
-         <div id="marathon-logo" class="omnibar-item">
+         <!-- <div id="marathon-logo" class="omnibar-item">
             <img id="marathon-logo-img"src="" />
-         </div>
+         </div> -->
       </div>
    </body>
 </html>
