--- a/graphics/Intermission.html
+++ b/graphics/Intermission.html
@@ -51,7 +51,7 @@
          <div class="info" id="on-deck-info1"></div>
          <div id="estimate-container">
             <div id="estimate-label">
-               <img src="img/common/timer.svg" />
+               <img class="timer" id="timer1" />
             </div>
             <div class="estimate" id="on-deck-estimate1"></div>
          </div>
@@ -61,7 +61,7 @@
          <div class="info" id="on-deck-info2"></div>
          <div id="estimate-container">
             <div id="estimate-label">
-               <img src="img/common/timer.svg" />
+               <img class="timer" id="timer2" />
             </div>
             <div class="estimate" id="on-deck-estimate2"></div>
          </div>
