Added pokemon image for GB 3p layout as a last minute request

--- a/graphics/GB_3p.html
+++ b/graphics/GB_3p.html
@@ -23,6 +23,9 @@
    
       <!-- Runner details -->
       <div class="runner-container" id="runner-container1">
+         <div class="runner-game" id="runner-game1">
+            <img class="game-img" id="game1-img" />
+         </div>
          <div class="runner-name" id="runner-name1"></div>
          <div class="medals" id="medals1">
             <img class="medals-img" id="medals1-img" />
@@ -32,6 +35,9 @@
       </div>
       
       <div class="runner-container" id="runner-container2">
+         <div class="runner-game" id="runner-game2">
+            <img class="game-img" id="game2-img" />
+         </div>
          <div class="runner-name" id="runner-name2"></div>
          <div class="medals" id="medals2">
             <img class="medals-img" id="medals2-img" />
@@ -41,6 +47,9 @@
       </div>
 
       <div class="runner-container" id="runner-container3">
+         <div class="runner-game" id="runner-game3">
+            <img class="game-img" id="game3-img" />
+         </div>
          <div class="runner-name" id="runner-name3"></div>
          <div class="medals" id="medals3">
             <img class="medals-img" id="medals3-img" />
